added product panels

--- a/public/assets/sass/base/_type--appearance.sass
+++ b/public/assets/sass/base/_type--appearance.sass
@@ -29,7 +29,7 @@ h1
   @extend .is__text--c-white
 
 h2
-  @extend .is__text--medium
+  @extend .is__text--light
 h3
   @extend .is__text--light
 hr
