--- a/public/assets/sass/base/is/_is__text.sass
+++ b/public/assets/sass/base/is/_is__text.sass
@@ -13,6 +13,9 @@
 .is__text--light
   font-weight: 300
 
+.is__text--thin
+  font-weight: 200
+
 .is__text--oblique
   font-style: oblique
   font-style: italic
