--- a/public/assets/sass/style.sass
+++ b/public/assets/sass/style.sass
@@ -21,6 +21,7 @@
 @import "components/contact"
 @import "components/promo"
 @import "components/panel"
+@import "components/panel-goods"
 
 //UI
 @import "ui/site-wide"
