--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -2204,20 +2204,28 @@ label[role="menu-toggle"] i {
 .main__storeline .storeline__panel {
   margin-top: 2.3rem; }
 
+/* line 31, base/_grid.sass */
+.storeline__list .list__item {
+  padding-bottom: 2.5rem; }
+
 /* line 36, base/_grid.sass */
 .footer__box {
   padding-top: 0.3rem; }
+
+/* line 40, base/_grid.sass */
+.panelGoods__heading, .main__article .goods__heading {
+  padding-left: 1.7rem; }
 
 /* line 1, base/is/_is__text.sass */
 .is__text--heavy {
   font-weight: 800; }
 
 /* line 4, base/is/_is__text.sass */
-.is__text--bold, h1, .component__contact input[type='submit'], .promo__hanging {
+.is__text--bold, h1, .component__contact input[type='submit'], .promo__hanging, .storeline__list .list__heading {
   font-weight: 700; }
 
 /* line 7, base/is/_is__text.sass */
-.is__text--medium, h2 {
+.is__text--medium {
   font-weight: 600; }
 
 /* line 10, base/is/_is__text.sass */
@@ -2225,44 +2233,48 @@ label[role="menu-toggle"] i {
   font-weight: 400; }
 
 /* line 13, base/is/_is__text.sass */
-.is__text--light, p, h3, blockquote, .component__contact h2, .promo__title, .component__panel, .main__storeline .storeline__panel, .breadcrumbs__title, .main__article .article__heading {
+.is__text--light, p, h2, h3, blockquote, .component__contact h2, .promo__title, .component__panel, .main__storeline .storeline__panel, .breadcrumbs__title, .main__article .article__heading, .storeline__list .list__item {
   font-weight: 300; }
 
 /* line 16, base/is/_is__text.sass */
-.is__text--oblique {
+.is__text--thin, .panelGoods__heading, .main__article .goods__heading, .panelGoods__caption, .main__article .goods__caption {
+  font-weight: 200; }
+
+/* line 19, base/is/_is__text.sass */
+.is__text--oblique, .panelGoods__caption, .main__article .goods__caption {
   font-style: oblique;
   font-style: italic; }
 
-/* line 20, base/is/_is__text.sass */
-.is__text--centered, blockquote, caption {
+/* line 23, base/is/_is__text.sass */
+.is__text--centered, blockquote, caption, .panelGoods__symbol, .main__article .goods__symbol, .panelGoods__caption, .main__article .goods__caption {
   text-align: center; }
 
-/* line 23, base/is/_is__text.sass */
+/* line 26, base/is/_is__text.sass */
 .is__text--left {
   text-align: left; }
 
-/* line 26, base/is/_is__text.sass */
+/* line 29, base/is/_is__text.sass */
 .is__text--right, label[role="menu-toggle"] i, .footer__legal, .info__social li {
   text-align: right; }
 
-/* line 29, base/is/_is__text.sass */
+/* line 32, base/is/_is__text.sass */
 .is__text--uppercase, caption, .component__contact input[type='submit'], .promo__hanging {
   text-transform: uppercase; }
 
-/* line 32, base/is/_is__text.sass */
+/* line 35, base/is/_is__text.sass */
 .is__text--size--giga {
   font-size: 33pt; }
 
-/* line 41, base/is/_is__text.sass */
-.is__text--size--milli, .footer__menu, .footer__services, .footer__location, .footer__legal {
+/* line 44, base/is/_is__text.sass */
+.is__text--size--milli, .panelGoods__caption, .main__article .goods__caption, .footer__menu, .footer__services, .footer__location, .footer__legal {
   font-size: 1.4rem; }
 
-/* line 44, base/is/_is__text.sass */
-.is__text--size--micro {
+/* line 47, base/is/_is__text.sass */
+.is__text--size--micro, .storeline__list .list__item {
   font-size: 1.3rem; }
 
-/* line 47, base/is/_is__text.sass */
-.is__text--unbulleted, .nav__list, .header__social li, .footer__menu, .footer__services, .footer__location, .footer__legal {
+/* line 50, base/is/_is__text.sass */
+.is__text--unbulleted, .nav__list, .header__social li, .footer__menu, .footer__services, .footer__location, .footer__legal, .storeline__list {
   list-style-type: none; }
 
 /* line 12, base/is/_is__this.sass */
@@ -2278,7 +2290,7 @@ label[role="menu-toggle"] i {
   margin: auto; }
 
 /* line 23, base/is/_is__this.sass */
-.is__this--inline, .header__social li, .footer__menu li, .footer__services li, .footer__list, .info__social li {
+.is__this--inline, .panelGoods__symbol, .main__article .goods__symbol, .panelGoods__heading, .main__article .goods__heading, .header__social li, .footer__menu li, .footer__services li, .footer__list, .info__social li {
   display: inline-block; }
 
 /* line 26, base/is/_is__this.sass */
@@ -2295,7 +2307,7 @@ label[role="menu-toggle"] i {
   color: #ef4036; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-red, .component__contact input[type='submit'], .component__panel, .main__storeline .storeline__panel {
+.is__background--c-red, .component__contact input[type='submit'], .component__panel, .main__storeline .storeline__panel, .panelGoods__symbol, .main__article .goods__symbol {
   background: #ef4036; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -2303,7 +2315,7 @@ label[role="menu-toggle"] i {
   border-color: #ef4036; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .main__storeline .storeline__panel, .main__article .article__copy {
+.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .main__storeline .storeline__panel, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, .main__article .article__copy, .storeline__list .list__heading {
   color: white; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -2315,7 +2327,7 @@ label[role="menu-toggle"] i {
   border-color: white; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-gray, .main__article .article__heading {
+.is__text--c-gray, .main__article .article__heading, .storeline__list .list__item {
   color: #8c8c8c; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -2327,7 +2339,7 @@ label[role="menu-toggle"] i {
   border-color: #8c8c8c; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-gray-light, label[role="menu-toggle"] i {
+.is__text--c-gray-light, .panelGoods__caption, .main__article .goods__caption, label[role="menu-toggle"] i {
   color: #999999; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -2379,7 +2391,7 @@ label[role="menu-toggle"] i {
   color: #444444; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-gray-darkest {
+.is__background--c-gray-darkest, .panelGoods__image, .main__article .goods__image {
   background: #444444; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -2391,7 +2403,7 @@ label[role="menu-toggle"] i {
   color: #0d0d0d; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-black, .block__breadcrumbs, .block__footer {
+.is__background--c-black, .panelGoods__text, .main__article .goods__text, .block__breadcrumbs, .block__footer {
   background: #0d0d0d; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -2568,6 +2580,28 @@ a {
     /* line 1, components/_panel.sass */
     .component__panel, .main__storeline .storeline__panel {
       padding: 2.5rem; } }
+
+/* line 5, components/_panel-goods.sass */
+.panelGoods__image, .main__article .goods__image {
+  height: 18rem;
+  display: block; }
+
+/* line 10, components/_panel-goods.sass */
+.panelGoods__text, .main__article .goods__text {
+  width: 100%; }
+
+/* line 14, components/_panel-goods.sass */
+.panelGoods__symbol, .main__article .goods__symbol {
+  height: 6rem;
+  width: 6rem; }
+  /* line 21, components/_panel-goods.sass */
+  .panelGoods__symbol i, .main__article .goods__symbol i {
+    padding: 1rem;
+    padding-top: 1.4rem; }
+
+/* line 26, components/_panel-goods.sass */
+.panelGoods__heading, .main__article .goods__heading {
+  font-size: 3.3rem; }
 
 /* line 1, ui/_site-wide.sass */
 .site-logo, .header__logo, .info__logo {
@@ -2927,8 +2961,61 @@ label[role="menu-toggle"] i {
       /* line 40, neat/grid/_span-columns.scss */
       .main__article:last-child {
         margin-right: 0; } }
+  /* line 19, ui/_main.sass */
+  .main__article .article__goods {
+    *zoom: 1;
+    display: block; }
+    /* line 17, bourbon/addons/_clearfix.scss */
+    .main__article .article__goods:before, .main__article .article__goods:after {
+      content: " ";
+      display: table; }
+    /* line 23, bourbon/addons/_clearfix.scss */
+    .main__article .article__goods:after {
+      clear: both; }
+  /* line 22, ui/_main.sass */
+  .main__article .goods__box {
+    float: left;
+    display: block;
+    margin-right: 4.82916%;
+    width: 100%; }
+    /* line 40, neat/grid/_span-columns.scss */
+    .main__article .goods__box:last-child {
+      margin-right: 0; }
+    @media screen and (min-width: 500px) {
+      /* line 22, ui/_main.sass */
+      .main__article .goods__box {
+        float: left;
+        display: block;
+        margin-right: 4.82916%;
+        width: 65.05695%;
+        margin-left: 17.47153%; }
+        /* line 40, neat/grid/_span-columns.scss */
+        .main__article .goods__box:last-child {
+          margin-right: 0; } }
+    @media screen and (min-width: 768px) {
+      /* line 22, ui/_main.sass */
+      .main__article .goods__box {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 100%;
+        margin-left: 0%; }
+        /* line 40, neat/grid/_span-columns.scss */
+        .main__article .goods__box:last-child {
+          margin-right: 0; } }
+    @media screen and (min-width: 900px) {
+      /* line 22, ui/_main.sass */
+      .main__article .goods__box {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 48.82117%;
+        margin-left: 0%; }
+        /* line 40, neat/grid/_span-columns.scss */
+        .main__article .goods__box:last-child {
+          margin-right: 0; } }
 
-/* line 18, ui/_main.sass */
+/* line 49, ui/_main.sass */
 .main__storeline {
   float: left;
   display: block;
@@ -2938,7 +3025,7 @@ label[role="menu-toggle"] i {
   .main__storeline:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 18, ui/_main.sass */
+    /* line 49, ui/_main.sass */
     .main__storeline {
       float: left;
       display: block;
@@ -2948,7 +3035,7 @@ label[role="menu-toggle"] i {
       .main__storeline:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 900px) {
-    /* line 18, ui/_main.sass */
+    /* line 49, ui/_main.sass */
     .main__storeline {
       float: left;
       display: block;
@@ -2956,6 +3043,56 @@ label[role="menu-toggle"] i {
       width: 40.29137%; }
       /* line 40, neat/grid/_span-columns.scss */
       .main__storeline:last-child {
+        margin-right: 0; } }
+  /* line 60, ui/_main.sass */
+  .main__storeline .storeline__text {
+    font-size: 2rem;
+    margin: 0; }
+    /* line 63, ui/_main.sass */
+    .main__storeline .storeline__text p {
+      margin: 0; }
+
+/* line 66, ui/_main.sass */
+.storeline__collection {
+  *zoom: 1;
+  display: block; }
+  /* line 17, bourbon/addons/_clearfix.scss */
+  .storeline__collection:before, .storeline__collection:after {
+    content: " ";
+    display: table; }
+  /* line 23, bourbon/addons/_clearfix.scss */
+  .storeline__collection:after {
+    clear: both; }
+
+/* line 69, ui/_main.sass */
+.storeline__list {
+  float: left;
+  display: block;
+  margin-right: 4.82916%;
+  width: 100%;
+  padding: 0; }
+  /* line 40, neat/grid/_span-columns.scss */
+  .storeline__list:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 500px) {
+    /* line 69, ui/_main.sass */
+    .storeline__list {
+      float: left;
+      display: block;
+      margin-right: 4.82916%;
+      width: 47.58542%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .storeline__list:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 768px) {
+    /* line 69, ui/_main.sass */
+    .storeline__list {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .storeline__list:last-child {
         margin-right: 0; } }
 
 /* line 9, plugins/traffic-light.scss */
