--- a/public/resources/sass/components/_panel.sass
+++ b/public/resources/sass/components/_panel.sass
@@ -7,6 +7,10 @@
   +media($laptopish)
     padding: 2.5rem
 
+.panel--small
+  @extend .component__panel
+  padding: 1.5rem
+
 .panel__text--large
   font-size: 2rem
   margin: 0
