--- a/public/resources/sass/plugins/traffic-light.scss
+++ b/public/resources/sass/plugins/traffic-light.scss
@@ -1,8 +1,10 @@
 $breakpoints: (
-  "phoneish" 320px,
-  "tabletish"  500px,
-  "tabletopish" 768px,
-  "laptopish"  900px
+  "phoneish" 0rem,
+  "phabletish" 20rem,
+  "tabletish"  30rem,
+  "tabletopish" 45rem,
+  "laptopish"  58rem,
+  "cinemaish"  100rem
 );
 
 
