--- a/public/resources/sass/style.sass
+++ b/public/resources/sass/style.sass
@@ -32,6 +32,6 @@
 @import "ui/main"
 @import "ui/about"
 @import "ui/merch"
-
+@import "ui/merch--details"
 //PLUGINS
 @import "plugins/traffic-light"
