--- a/craft/templates/_layout--main.html
+++ b/craft/templates/_layout--main.html
@@ -9,7 +9,7 @@
         <title>{{ siteName }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        {% includeCssResource 'sass/style.css' %}
+        {% includeCssResource 'sass/style-compiled.css' %}
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
