--- a/craft/templates/partials/_header.html
+++ b/craft/templates/partials/_header.html
@@ -9,13 +9,10 @@
         <i class="fa fa-bars fa-2x"></i>
       </label>
       <nav class="nav__box" role="menu">
-        {% set entries = craft.entries %}
           <ul class="nav__menu">
-             {% nav entry in entries %}
+             {% nav each in theMenus.mainMenu %}
                 <li class="nav__list">
-                  <a href="{{entry.url}}">
-                    {{ entry.title }}
-                  </a>
+                  {{ each.getLink() }}
                 </li>
               {% endnav %}
           </ul>
