--- a/public/resources/sass/ui/_aside.sass
+++ b/public/resources/sass/ui/_aside.sass
@@ -13,9 +13,14 @@
 .moreinfo__promo
   +media($tabletopish)
     +span-columns(4)
+
+.moreinfo__title
+  margin-bottom: 0
+
 .moreinfo__tour
   +media($tabletopish)
     +span-columns(5)
+
 .moreinfo__contact
   +media($phoneish)
     +span-columns(6)
