--- a/craft/templates/partials/_aside.html
+++ b/craft/templates/partials/_aside.html
@@ -18,8 +18,15 @@
     </div>
 
     <div class="moreinfo__tour">
-      <div class="tour">
-        <img src="" alt="" class="tour__video">
+      <div class="tour__box">
+
+        <div class="tour__panel">
+          Take a Tour
+        </div>
+
+        <video class="tour__video" src="">
+        </video>
+
       </div>
     </div>
     <div class="moreinfo__contact">
