--- a/public/resources/sass/components/_promo.sass
+++ b/public/resources/sass/components/_promo.sass
@@ -4,6 +4,7 @@
 
 .promo__title
   @extend .is__text--light
+  margin-bottom: 0
 
 .promo__copy
   font-size: 2.0rem
@@ -13,4 +14,4 @@
 
 .promo__hanging
   @extend .is__text--uppercase
-  @extend .is__text--bold
+  @extend .is__text--regular
