--- a/public/resources/sass/ui/_header.sass
+++ b/public/resources/sass/ui/_header.sass
@@ -111,7 +111,7 @@ label[role="menu-toggle"]
     @extend .is__border--c-gray-light
     border-left-width: .1rem
     border-left-style: solid
-    padding-left: 1.7rem
+    padding-left: 1.9vw
 
     &:hover
       @extend .is__text--c-red
