--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -18,7 +18,7 @@
         {% for item in entry.goods %}
           <div class="goods__box">
             <a href="{{ item.linkingPage[0].url }}">
-              <img class="goods__image">
+              <img class="goods__image" src="{{ item.image[0].url}}">
               <div class="goods__text">
                 <div class="goods__symbol">
                   <i class="fa fa-2x fa-twitter"></i>
