--- a/public/resources/sass/style-compiled.css
+++ b/public/resources/sass/style-compiled.css
@@ -2226,7 +2226,7 @@ label[role="menu-toggle"] i {
   font-weight: 800; }
 
 /* line 4, base/is/_is__text.sass */
-.is__text--bold, h1, .component__contact input[type='submit'], .promo__hanging, .storeline__list .list__heading, .merchitem__image:hover:before, .mDetail__price {
+.is__text--bold, h1, .component__contact input[type='submit'], .storeline__list .list__heading, .merchitem__image:hover:before, .mDetail__price {
   font-weight: 700; }
 
 /* line 7, base/is/_is__text.sass */
@@ -2234,15 +2234,15 @@ label[role="menu-toggle"] i {
   font-weight: 600; }
 
 /* line 10, base/is/_is__text.sass */
-.is__text--regular {
+.is__text--regular, .promo__hanging {
   font-weight: 400; }
 
 /* line 13, base/is/_is__text.sass */
-.is__text--light, p, h2, h3, blockquote, .component__contact h2, .promo__title, .component__panel, .panel--small, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .breadcrumbs__title, .main__article .article__heading, .storeline__list .list__item, .merchitem__info, .merchitem__price, .merch__collection .collection__item {
+.is__text--light, p, h2, h3, blockquote, .component__contact h2, .promo__title, .component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .breadcrumbs__title, .main__article .article__heading, .storeline__list .list__item, .merchitem__info, .merchitem__price, .merch__collection .collection__item {
   font-weight: 300; }
 
 /* line 16, base/is/_is__text.sass */
-.is__text--thin, .panelGoods__heading, .main__article .goods__heading, .panelGoods__caption, .main__article .goods__caption {
+.is__text--thin, .panelGoods__heading, .main__article .goods__heading, .panelGoods__caption, .main__article .goods__caption, .tour__panel {
   font-weight: 200; }
 
 /* line 19, base/is/_is__text.sass */
@@ -2271,7 +2271,7 @@ label[role="menu-toggle"] i {
   font-size: 33pt; }
 
 /* line 44, base/is/_is__text.sass */
-.is__text--size--milli, .panelGoods__caption, .main__article .goods__caption, .footer__menu, .footer__services, .footer__location, .footer__legal, .merchitem__image:hover:before, .merch__collection .collection__item, .mDetail__brand {
+.is__text--size--milli, .panelGoods__caption, .main__article .goods__caption, .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal, .merchitem__image:hover:before, .merch__collection .collection__item, .mDetail__brand {
   font-size: 1.4rem; }
 
 /* line 47, base/is/_is__text.sass */
@@ -2283,7 +2283,7 @@ label[role="menu-toggle"] i {
   font-size: 1.2rem; }
 
 /* line 53, base/is/_is__text.sass */
-.is__text--unbulleted, .is__list--unformatted, .storeline__list, .merch__collection .collection__list, .nav__list, .header__social li, .footer__menu, .footer__services, .footer__location, .footer__legal {
+.is__text--unbulleted, .is__list--unformatted, .storeline__list, .merch__collection .collection__list, .nav__list, .header__social li, .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal {
   list-style-type: none; }
 
 /* line 12, base/is/_is__this.sass */
@@ -2291,7 +2291,7 @@ label[role="menu-toggle"] i {
   float: left; }
 
 /* line 16, base/is/_is__this.sass */
-.is__this--floating--right, .component__contact input[type='submit'], label[role="menu-toggle"], .merchitem__price {
+.is__this--floating--right, label[role="menu-toggle"], .merchitem__price {
   float: right; }
 
 /* line 19, base/is/_is__this.sass */
@@ -2316,7 +2316,7 @@ label[role="menu-toggle"] i {
   color: #ef4036; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-red, .component__contact input[type='submit'], .component__panel, .panel--small, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .panelGoods__symbol, .main__article .goods__symbol {
+.is__background--c-red, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .panelGoods__symbol, .main__article .goods__symbol {
   background: #ef4036; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -2324,7 +2324,7 @@ label[role="menu-toggle"] i {
   border-color: #ef4036; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .panel--small, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, .main__article .article__copy, .storeline__list .list__heading, .merchitem__name, .merchitem__price, .mDetail__price, .mDetail__description {
+.is__text--c-white, h1, .component__contact input[type='submit'], .component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel, .panelGoods__symbol i, .main__article .goods__symbol i, .panelGoods__heading, .main__article .goods__heading, .main__article .article__copy, .storeline__list .list__heading, .merchitem__name, .merchitem__price, .mDetail__price, .mDetail__description {
   color: white; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -2384,7 +2384,7 @@ label[role="menu-toggle"] i {
   border-color: #343434; }
 
 /* line 5, base/is/_is__colors.sass */
-.is__text--c-gray-dark, .footer__menu, .footer__services, .footer__location, .footer__legal {
+.is__text--c-gray-dark, .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal, .info__social .social__item i:nth-of-type(odd) {
   color: #646464; }
 
 /* line 9, base/is/_is__colors.sass */
@@ -2412,7 +2412,7 @@ label[role="menu-toggle"] i {
   color: #0d0d0d; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-black, .panelGoods__text, .main__article .goods__text, .block__breadcrumbs, .block__footer {
+.is__background--c-black, .panelGoods__text, .main__article .goods__text, .block__breadcrumbs, .block__footer, .tour__video {
   background: #0d0d0d; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -2578,53 +2578,58 @@ a {
   .promo {
     text-align: center; } }
 
-/* line 8, components/_promo.sass */
+/* line 5, components/_promo.sass */
+.promo__title {
+  margin-bottom: 0; }
+
+/* line 9, components/_promo.sass */
 .promo__copy {
   font-size: 2rem; }
-  /* line 10, components/_promo.sass */
+  /* line 11, components/_promo.sass */
   .promo__copy p {
     margin: 0;
     padding: 0; }
 
 /* line 1, components/_panel.sass */
-.component__panel, .panel--small, .mDetail__panel, .main__aside .storeline__panel, .merch__panel {
+.component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel {
   padding: 2.2rem; }
   @media screen and (min-width: 900px) {
     /* line 1, components/_panel.sass */
-    .component__panel, .panel--small, .mDetail__panel, .main__aside .storeline__panel, .merch__panel {
+    .component__panel, .panel--small, .tour__panel, .mDetail__panel, .main__aside .storeline__panel, .merch__panel {
       padding: 2.5rem; } }
 
 /* line 10, components/_panel.sass */
-.panel--small, .mDetail__panel {
+.panel--small, .tour__panel, .mDetail__panel {
   padding: 1.5rem; }
 
 /* line 14, components/_panel.sass */
-.panel__text--large, .main__aside .storeline__text, .merch__text, .mDetail__panel {
+.panel__text--large, .tour__panel, .main__aside .storeline__text, .merch__text, .mDetail__panel {
   font-size: 2rem;
   margin: 0; }
   /* line 17, components/_panel.sass */
-  .panel__text--large p, .main__aside .storeline__text p, .merch__text p, .mDetail__panel p {
+  .panel__text--large p, .tour__panel p, .main__aside .storeline__text p, .merch__text p, .mDetail__panel p {
     margin: 0; }
 
 /* line 5, components/_panel-goods.sass */
 .panelGoods__image, .main__article .goods__image {
   height: 18rem;
+  width: 100%;
   display: block; }
 
-/* line 10, components/_panel-goods.sass */
+/* line 12, components/_panel-goods.sass */
 .panelGoods__text, .main__article .goods__text {
   width: 100%; }
 
-/* line 14, components/_panel-goods.sass */
+/* line 16, components/_panel-goods.sass */
 .panelGoods__symbol, .main__article .goods__symbol {
   height: 6rem;
   width: 6rem; }
-  /* line 21, components/_panel-goods.sass */
+  /* line 23, components/_panel-goods.sass */
   .panelGoods__symbol i, .main__article .goods__symbol i {
     padding: 1rem;
     padding-top: 1.4rem; }
 
-/* line 26, components/_panel-goods.sass */
+/* line 28, components/_panel-goods.sass */
 .panelGoods__heading, .main__article .goods__heading {
   font-size: 3.3rem; }
 
@@ -2764,7 +2769,7 @@ label[role="menu-toggle"] i {
   .nav__list a {
     border-left-width: 0.1rem;
     border-left-style: solid;
-    padding-left: 1.7rem; }
+    padding-left: 1.9vw; }
   /* line 120, ui/_header.sass */
   .nav__list:first-child a {
     border: none; }
@@ -2784,7 +2789,7 @@ label[role="menu-toggle"] i {
 
 @media screen and (min-width: 0px) and (max-width: 768px) {
   /* line 9, ui/_footer.sass */
-  .footer__menu, .footer__services, .footer__location, .footer__legal, .info__social ul {
+  .footer__menu, .footer__services, .footer__hours, .footer__location, .footer__legal, .info__social ul {
     padding: 0;
     text-align: center; } }
 
@@ -2812,7 +2817,7 @@ label[role="menu-toggle"] i {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 14.70196%; }
+      width: 6.17215%; }
       /* line 40, neat/grid/_span-columns.scss */
       .footer__menu-box:last-child, .footer__services-box:last-child {
         margin-right: 0; } }
@@ -2830,6 +2835,26 @@ label[role="menu-toggle"] i {
     display: block; } }
 
 /* line 52, ui/_footer.sass */
+.footer__hours-box {
+  float: left;
+  display: block;
+  margin-right: 4.82916%;
+  width: 100%; }
+  /* line 40, neat/grid/_span-columns.scss */
+  .footer__hours-box:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 768px) {
+    /* line 52, ui/_footer.sass */
+    .footer__hours-box {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 23.23176%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .footer__hours-box:last-child {
+        margin-right: 0; } }
+
+/* line 60, ui/_footer.sass */
 .footer__location-box {
   float: left;
   display: block;
@@ -2839,17 +2864,17 @@ label[role="menu-toggle"] i {
   .footer__location-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 52, ui/_footer.sass */
+    /* line 60, ui/_footer.sass */
     .footer__location-box {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 31.76157%; }
+      width: 23.23176%; }
       /* line 40, neat/grid/_span-columns.scss */
       .footer__location-box:last-child {
         margin-right: 0; } }
 
-/* line 61, ui/_footer.sass */
+/* line 69, ui/_footer.sass */
 .footer__info-box {
   float: left;
   display: block;
@@ -2859,7 +2884,7 @@ label[role="menu-toggle"] i {
   .footer__info-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 61, ui/_footer.sass */
+    /* line 69, ui/_footer.sass */
     .footer__info-box {
       float: left;
       display: block;
@@ -2869,15 +2894,15 @@ label[role="menu-toggle"] i {
       .footer__info-box:last-child {
         margin-right: 0; } }
 
-/* line 67, ui/_footer.sass */
+/* line 75, ui/_footer.sass */
 .footer__info ul {
   padding: 0; }
 
-/* line 74, ui/_footer.sass */
+/* line 82, ui/_footer.sass */
 .legal__item {
   display: block; }
 
-/* line 77, ui/_footer.sass */
+/* line 85, ui/_footer.sass */
 .info__social-box {
   *zoom: 1;
   display: block; }
@@ -2889,7 +2914,7 @@ label[role="menu-toggle"] i {
   .info__social-box:after {
     clear: both; }
 
-/* line 80, ui/_footer.sass */
+/* line 88, ui/_footer.sass */
 .info__social {
   float: left;
   display: block;
@@ -2899,7 +2924,7 @@ label[role="menu-toggle"] i {
   .info__social:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 80, ui/_footer.sass */
+    /* line 88, ui/_footer.sass */
     .info__social {
       float: left;
       display: block;
@@ -2908,11 +2933,11 @@ label[role="menu-toggle"] i {
       /* line 40, neat/grid/_span-columns.scss */
       .info__social:last-child {
         margin-right: 0; } }
-  /* line 85, ui/_footer.sass */
+  /* line 93, ui/_footer.sass */
   .info__social ul {
     padding-right: 0.5rem; }
 
-/* line 100, ui/_footer.sass */
+/* line 110, ui/_footer.sass */
 .info__logo-box {
   float: left;
   display: block;
@@ -2922,7 +2947,7 @@ label[role="menu-toggle"] i {
   .info__logo-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 100, ui/_footer.sass */
+    /* line 110, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
@@ -2932,7 +2957,7 @@ label[role="menu-toggle"] i {
       .info__logo-box:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 768px) {
-    /* line 100, ui/_footer.sass */
+    /* line 110, ui/_footer.sass */
     .info__logo-box {
       float: left;
       display: block;
@@ -2942,13 +2967,13 @@ label[role="menu-toggle"] i {
       .info__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 107, ui/_footer.sass */
+/* line 117, ui/_footer.sass */
 .info__logo {
   height: 8.8rem;
   width: 8.8rem;
   margin: 0 auto; }
   @media screen and (min-width: 768px) {
-    /* line 107, ui/_footer.sass */
+    /* line 117, ui/_footer.sass */
     .info__logo {
       height: 5.5rem;
       width: 5.5rem;
@@ -2970,28 +2995,46 @@ label[role="menu-toggle"] i {
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 31.76157%; }
+    width: 23.23176%; }
     /* line 40, neat/grid/_span-columns.scss */
     .moreinfo__promo:last-child {
       margin-right: 0; } }
 
 /* line 17, ui/_aside.sass */
-.moreinfo__title {
-  margin-bottom: 0; }
+.moreinfo__tour {
+  margin-top: 2.5rem; }
+  @media screen and (min-width: 768px) {
+    /* line 17, ui/_aside.sass */
+    .moreinfo__tour {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%; }
+      /* line 40, neat/grid/_span-columns.scss */
+      .moreinfo__tour:last-child {
+        margin-right: 0; } }
 
-@media screen and (min-width: 768px) {
-  /* line 20, ui/_aside.sass */
-  .moreinfo__tour {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 40.29137%; }
-    /* line 40, neat/grid/_span-columns.scss */
-    .moreinfo__tour:last-child {
-      margin-right: 0; } }
+/* line 22, ui/_aside.sass */
+.tour__box {
+  position: relative; }
+
+/* line 25, ui/_aside.sass */
+.tour__panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 17rem;
+  display: block;
+  z-index: 10;
+  height: 4.5rem;
+  padding: 1.1rem; }
+
+/* line 39, ui/_aside.sass */
+.tour__video {
+  width: 100%; }
 
 @media screen and (min-width: 0px) {
-  /* line 24, ui/_aside.sass */
+  /* line 43, ui/_aside.sass */
   .moreinfo__contact {
     float: left;
     display: block;
@@ -3001,7 +3044,7 @@ label[role="menu-toggle"] i {
     .moreinfo__contact:last-child {
       margin-right: 0; } }
 @media screen and (min-width: 500px) {
-  /* line 24, ui/_aside.sass */
+  /* line 43, ui/_aside.sass */
   .moreinfo__contact {
     float: left;
     display: block;
@@ -3012,7 +3055,7 @@ label[role="menu-toggle"] i {
     .moreinfo__contact:last-child {
       margin-right: 0; } }
 @media screen and (min-width: 768px) {
-  /* line 24, ui/_aside.sass */
+  /* line 43, ui/_aside.sass */
   .moreinfo__contact {
     float: left;
     display: block;
@@ -3398,26 +3441,37 @@ label[role="menu-toggle"] i {
     padding-right: 0.7rem; }
 
 /* line 1, ui/_merch--details.sass */
-.mDetail__gallery {
+.mDetail__gallery-box {
   float: left;
   display: block;
   margin-right: 4.82916%;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 2rem; }
   /* line 40, neat/grid/_span-columns.scss */
-  .mDetail__gallery:last-child {
+  .mDetail__gallery-box:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
     /* line 1, ui/_merch--details.sass */
-    .mDetail__gallery {
+    .mDetail__gallery-box {
       float: left;
       display: block;
       margin-right: 2.35765%;
-      width: 57.35098%; }
+      width: 57.35098%;
+      margin-bottom: 0; }
       /* line 40, neat/grid/_span-columns.scss */
-      .mDetail__gallery:last-child {
+      .mDetail__gallery-box:last-child {
         margin-right: 0; } }
 
-/* line 6, ui/_merch--details.sass */
+/* line 9, ui/_merch--details.sass */
+.mDetail__item img {
+  width: 100%;
+  max-height: 29rem; }
+  @media screen and (min-width: 768px) {
+    /* line 9, ui/_merch--details.sass */
+    .mDetail__item img {
+      max-height: 35rem; } }
+
+/* line 16, ui/_merch--details.sass */
 .mDetail__aside {
   float: left;
   display: block;
@@ -3427,7 +3481,7 @@ label[role="menu-toggle"] i {
   .mDetail__aside:last-child {
     margin-right: 0; }
   @media screen and (min-width: 768px) {
-    /* line 6, ui/_merch--details.sass */
+    /* line 16, ui/_merch--details.sass */
     .mDetail__aside {
       float: left;
       display: block;
@@ -3437,7 +3491,7 @@ label[role="menu-toggle"] i {
       .mDetail__aside:last-child {
         margin-right: 0; } }
 
-/* line 15, ui/_merch--details.sass */
+/* line 25, ui/_merch--details.sass */
 .mDetail__info-box {
   padding-left: 1.5rem;
   padding-top: 0.8rem;
@@ -3451,11 +3505,11 @@ label[role="menu-toggle"] i {
   .mDetail__info-box:after {
     clear: both; }
 
-/* line 20, ui/_merch--details.sass */
+/* line 30, ui/_merch--details.sass */
 .mDetail__serial, .mDetail__price {
   font-size: 1.8rem; }
 
-/* line 23, ui/_merch--details.sass */
+/* line 33, ui/_merch--details.sass */
 .mDetail__serial {
   float: left;
   display: block;
@@ -3465,7 +3519,7 @@ label[role="menu-toggle"] i {
   .mDetail__serial:last-child {
     margin-right: 0; }
 
-/* line 32, ui/_merch--details.sass */
+/* line 42, ui/_merch--details.sass */
 .mDetail__price {
   float: left;
   display: block;
@@ -3476,7 +3530,7 @@ label[role="menu-toggle"] i {
   .mDetail__price:last-child {
     margin-right: 0; }
 
-/* line 40, ui/_merch--details.sass */
+/* line 50, ui/_merch--details.sass */
 .mDetail__description {
   float: left;
   display: block;
@@ -3486,7 +3540,7 @@ label[role="menu-toggle"] i {
   .mDetail__description:last-child {
     margin-right: 0; }
 
-/* line 44, ui/_merch--details.sass */
+/* line 54, ui/_merch--details.sass */
 .mDetail__brand {
   float: left;
   display: block;
