--- a/public/resources/sass/base/_grid.sass
+++ b/public/resources/sass/base/_grid.sass
@@ -12,7 +12,9 @@
 .c
   +span-columns(6)
 
-
+//adds margin to the content box
+%content-pad
+  padding-bottom: 6rem
 
 //LAYOUT MARGINS & PADDINGS
 @for $i from 1 through 30
