--- a/public/resources/sass/ui/_footer.sass
+++ b/public/resources/sass/ui/_footer.sass
@@ -18,6 +18,7 @@
   @extend .is__text--c-gray-dark
   @extend .is__text--unbulleted
 
+
 %footer__list--inline
   li
     @extend .is__this--inline
@@ -27,6 +28,15 @@
       display: block
       padding: 0
 
+%footer__list--bordered
+  li
+    +media($mobileish)
+      border-left: solid 1px rgb(56, 56, 56)
+      padding: 0 1.4rem
+      &:first-of-type
+        border: none
+    +media($phoneish)
+      padding: 0 .5rem
 
 .footer__menu-box, .footer__services-box
   +span-columns(6)
@@ -42,6 +52,7 @@
 
   @extend %footer__list
   @extend %footer__list--inline
+  @extend %footer__list--bordered
 
 .footer__list
   @extend .is__this--inline
