--- a/public/resources/sass/ui/_merch.sass
+++ b/public/resources/sass/ui/_merch.sass
@@ -1,5 +1,6 @@
 .block__merch
   @extend .is__background--c-gray-medium
+  @extend %content-pad
 
 .merch__box
   +oc
@@ -9,6 +10,7 @@
   +media($mobileish)
     +span-columns(4)
     +shift(1)
+    margin-bottom: 5rem
   +media($tabletopish)
     +span-columns(7)
   +media($laptopish)
@@ -27,6 +29,7 @@
   width: 23rem
   padding-bottom: 5rem
   margin: 0 auto
+  margin-bottom: 3.6rem
 
 .merchitem__image
 
