--- a/public/resources/sass/style.sass
+++ b/public/resources/sass/style.sass
@@ -33,5 +33,7 @@
 @import "ui/about"
 @import "ui/merch"
 @import "ui/merch--details"
+@import "ui/merch--search"
+
 //PLUGINS
 @import "plugins/traffic-light"
