--- a/craft/templates/_layout--main.html
+++ b/craft/templates/_layout--main.html
@@ -9,9 +9,7 @@
         <title>{{ siteName }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        {% includeCssResource 'sass/style-compiled.css' %}
-
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}resources/﻿sass/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
