--- a/craft/templates/merch/merchItem.html
+++ b/craft/templates/merch/merchItem.html
@@ -4,15 +4,15 @@
       <div class="mDetail__gallery owl-carousel" id="slider">
       {% for image in entry.productGallery %}
 
-      {% set imageParams = {
-        width: 575,
-        height: 350,
-        mode: 'crop',
-        position: 'center-center'
+        {% set imageParams = {
+          width: 575,
+          height: 350,
+          mode: 'crop',
+          position: 'center-center'
 
-      } %}
+        } %}
         <div class="mDetail__item">
-          <img src="{{ image.getUrl(imageParams) }}" width="{{ image.getWidth('galleryPicture') }}" height="{{ image.getHeight('galleryPicture') }}" alt="">
+          <img src="{{ image.getUrl(imageParams) }}" alt="">
         </div>
       {% endfor %}
     </div>
