--- a/craft/templates/_layout--main.html
+++ b/craft/templates/_layout--main.html
@@ -9,7 +9,7 @@
         <title>{{ siteName }}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}resources/﻿sass/style-compiled.css">
+        <link rel="stylesheet" href="{{ craft.config.environmentVariables.siteUrl }}/resources/style-compiled.css">
     </head>
     <body>
         <!--[if lt IE 7]>
