--- a/resources/sass/ui/_site-wide.sass
+++ b/resources/sass/ui/_site-wide.sass
@@ -1,5 +1,6 @@
 body
   @extend .is__background--c-black
+
 .site-logo
-  background: url('../img/site-logo.svg') center no-repeat
+  background: url('img/site-logo.svg') center no-repeat
   background-size: contain
